infra/nc-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nc-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nc
  template:
    metadata:
      labels:
        app: nc
    spec:
      containers:
        - name: nc
          image: suhdonggeun/nc
#          env:
#            - name: JWT_KEY
#              valueFrom:
#                secretKeyRef:
#                  name: jwt-secret
#                  key: JWT_KEY.txt
---
apiVersion: v1
kind: Service
metadata:
  name: nc-srv
spec:
  selector:
    app: nc
  ports:
    - name: nc
      protocol: TCP
      port: 3001
      targetPort: 3001
